--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="profile_name">
           Alex Khodyka
           <div class="contact_info">
-            <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+            <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-envelope-vector-icon-white-transparent-background-png-image_1978009.jpg"/>
           alexkhodykaofficial@gmail.com
         </div>
         <div style="clear:both;"></div>
