--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="html_finalprojimages/html5.png"/>
+          <img src="https://seeklogo.com/images/H/html5-logo-EF92D240D7-seeklogo.com.png"/>
           <h6>HTML</h6>
           <p>1 year experience</p>
         </div>  
 
         <div class="skill">
-          <img src="html_finalprojimages/js.jpeg"/>
+          <img src="https://seeklogo.com/images/J/javascript-logo-8892AEFCAC-seeklogo.com.png"/>
           <h6>JavaScript</h6>
           <p>1 year experience</p>
         </div> 
