--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div class="profile_name">
           Alex Khodyka
           <div class="contact_info">
-            <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/mail-envelope-symbol-logo-4AB011B4E0-seeklogo.com.png"/>
+            <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/mail-envelope-symbol-logo-4AB011B4E0-seeklogo.com.png"/>
           alexkhodykaofficial@gmail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
-          <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/phone-logo-CA0ABEDEEB-seeklogo.com.png"/>
+          <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/phone-logo-CA0ABEDEEB-seeklogo.com.png"/>
           +358449719586
 
         </div>
@@ -58,37 +58,37 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/html5-logo-EF92D240D7-seeklogo.com.png"/>
+          <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/html5-logo-EF92D240D7-seeklogo.com.png"/>
           <h6>HTML</h6>
           <p>1 year experience</p>
         </div>  
 
         <div class="skill">
-          <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/javascript-logo-8892AEFCAC-seeklogo.com.png"/>
+          <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/javascript-logo-8892AEFCAC-seeklogo.com.png"/>
           <h6>JavaScript</h6>
           <p>1 year experience</p>
         </div> 
 
         <div class="skill">
-            <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/c-sharp-c-logo-02F17714BA-seeklogo.com.png"/>
+            <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/c-sharp-c-logo-02F17714BA-seeklogo.com.png"/>
             <h6>C#</h6>
             <p>2 years experience</p>
           </div> 
 
           <div class="skill">
-            <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/C%2B%2B_logo.png"/>
+            <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/C%2B%2B_logo.png"/>
             <h6>C++</h6>
             <p>1 year experience</p>
 
           </div> 
           <div class="skill">
-            <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/python-logo-C50EED1930-seeklogo.com.png"/>
+            <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/python-logo-C50EED1930-seeklogo.com.png"/>
             <h6>Python</h6>
             <p>1 year experience</p>
 
           </div>
           <div class="skill">
-            <img src="https://github.com/AlexKhodyka/my-portfolio/blob/main/html_finalprojimages/css-3-logo-023C1A7171-seeklogo.com.png"/>
+            <img src="https://raw.githubusercontent.com/AlexKhodyka/my-portfolio/main/html_finalprojimages/css-3-logo-023C1A7171-seeklogo.com.png"/>
             <h6>CSS</h6>
             <p>1 year experience</p> 
             
